fixup: remove replacedMemberId parameter